# rhcalendar

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
examples/: simple.py
rhcalendar/: __init__.py  locales.py
rhcalendar/tests/: test_en_us.py  test_init.py
