[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rhcalendar"
dynamic = ["version"]
description = "Red Hat business days calendar"
authors = [
    {name = "Ken Dreyer", email = "ktdreyer@ktdreyer.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["workdays"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "workdays",
]

[project.urls]
Homepage = "https://github.com/ktdreyer/rhcalendar"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rhcalendar/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["rhcalendar"]

[tool.hatch.build.targets.sdist]
include = [
    "rhcalendar/",
    "README.md",
    "LICENSE",
]
